Eevee: viewport issues before toggling AO support #52593

Closed
opened 2017-08-30 18:05:53 +02:00 by Dalai Felinto · 13 comments

System Information
Windows + AMD Radeon WX7100
Mac Book Pro + NVidia

Blender Version
Broken: 659be38760
Worked: 659be3876078^

Short description of error
Shaders are wrong (black) before running with AO at least once.

Exact steps for others to reproduce the error

  • Open Factory startup
    Cube is black.
  • Turn on Ambient Occlusion
    Cube is fine.
  • Turn off Ambient Occlusion
    Cube is still fine.
**System Information** Windows + AMD Radeon WX7100 Mac Book Pro + NVidia **Blender Version** Broken: 659be3876078 Worked: 659be3876078^ **Short description of error** Shaders are wrong (black) before running with AO at least once. **Exact steps for others to reproduce the error** * Open Factory startup *Cube is black.* * Turn on Ambient Occlusion *Cube is fine.* * Turn off Ambient Occlusion *Cube is still fine.*
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

Added subscriber: @brecht

Added subscriber: @brecht
Clément Foucault was assigned by Dalai Felinto 2017-08-30 18:06:28 +02:00
Author
Owner

Comments by @brecht:

Enabling Ambient Occlusion makes it work again here, even if you then disable it. I think it's some problem with the aoSettings variable getting the wrong value initially, though it's not clear to me how.

Comments by @brecht: > Enabling Ambient Occlusion makes it work again here, even if you then disable it. I think it's some problem with the aoSettings variable getting the wrong value initially, though it's not clear to me how.
Author
Owner

Added subscriber: @AndyCodling

Added subscriber: @AndyCodling
Author
Owner

@matthe: The thing is, the issue was caused by the GTAO commit. Enabling AO was never suggested as a workaround, but instead of a way to reproduce the bug in a simple and reliable way.

@matthe: The thing is, the issue was caused by the GTAO commit. Enabling AO was never suggested as a workaround, but instead of a way to reproduce the bug in a simple and reliable way.
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Using git commit 5b026486e4 with amd pro duo card the default cube in eevee renders with jitters. Other cards with same build (AMD 480, GTX580) works fine (same machine). After toggling AO all works fine on pro duo card. I only noticed it a week ago after installing the pro duo card.

The system info shows my custom branch, but the blender2.8 branch also has this. If you need more info/test, please let me know.

Screenshot from 2017-09-08 11-39-38.png
system-info-pro-duo.txt

console.txt

Using git commit 5b026486e4f2a36bf4c988593ebecb135a2ccf84 with amd pro duo card the default cube in eevee renders with jitters. Other cards with same build (AMD 480, GTX580) works fine (same machine). After toggling AO all works fine on pro duo card. I only noticed it a week ago after installing the pro duo card. The system info shows my custom branch, but the blender2.8 branch also has this. If you need more info/test, please let me know. ![Screenshot from 2017-09-08 11-39-38.png](https://archive.blender.org/developer/F778846/Screenshot_from_2017-09-08_11-39-38.png) [system-info-pro-duo.txt](https://archive.blender.org/developer/F778844/system-info-pro-duo.txt) [console.txt](https://archive.blender.org/developer/F778845/console.txt)

This issue was referenced by f875e396ce

This issue was referenced by f875e396ce2bea2859501841d5ec90e6100af2ad

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Owner

Added subscriber: @MikeErwin

Added subscriber: @MikeErwin
Author
Owner

As it turned out, the issue was that we needed to bind a texture even if we were not sampling it. Linux with some setups wouldn't complain though.
Anyone may have a clue of what is the real issue and recommended official workaround? @brecht? @MikeErwin?

As it turned out, the issue was that we needed to bind a texture even if we were not sampling it. Linux with some setups wouldn't complain though. Anyone may have a clue of what is the real issue and recommended official workaround? @brecht? @MikeErwin?

I think that's just something we have to follow, we've encountered that issue before. Either you bind all the textures or compile a different shader that doesn't have those textures. I don't know if the specification requires it, but there's enough drivers that just don't work otherwise.

I think that's just something we have to follow, we've encountered that issue before. Either you bind all the textures or compile a different shader that doesn't have those textures. I don't know if the specification requires it, but there's enough drivers that just don't work otherwise.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52593
No description provided.