Eevee: Fix T52593

Use a placeholder texture to remove problems with sampler with no texture bound to it.